# candlestick

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
src/candlestick/: config.py  dependency_container.py
src/candlestick/application/: unit_of_work.py
src/candlestick/application/ports/: __init__.py  stream_provider.py
src/candlestick/application/repositories/: __init__.py  instrument.py
src/candlestick/application/use_cases/: __init__.py  get_candlesticks.py  subscribe_instrument_stream.py  subscribe_quote_stream.py
src/candlestick/domain/: utils.py
src/candlestick/domain/exceptions/: __init__.py  instrument_error.py  persistence_error.py
src/candlestick/domain/models/: instrument.py
src/candlestick/infrastructure/: unit_of_work.py
src/candlestick/infrastructure/adapters/: __init__.py
src/candlestick/infrastructure/adapters/stream_provider/: __init__.py  memory_stream_provider.py  partner_stream_provider.py
src/candlestick/infrastructure/repositories/: instrument.py  orm.py
src/candlestick/infrastructure/repositories/alembic/migrations/: env.py
src/candlestick/interface/api/: main.py  models.py
src/candlestick/interface/cli/: app.py  subscribe_instrument_stream.py  subscribe_quote_stream.py
src/tests/: conftest.py
src/tests/infrastructure/repositories/: test_sql_instrument_repository.py
